# am4-ops-center

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  _dedupe_ra.py  _fix_airports_index.py  _schema_airports.py  _schema_check2.py  _vacuum.py  config.py  docker-compose.yml  eslint.config.mjs  fleet_backup.csv  main.py  package-lock.json  package.json  pyproject.toml  pytest_output.txt  requirements.in  requirements.txt  routes_backup.csv
.taskmaster/: config.json  state.json
PRD/: _capture_flamegraphs.py  _dump_frame_tree.py  _profile_direct_pages.py  _profile_inline_threadpool.py  _pyspy_capture.py  _summarize_direct_profile.py  am4-routemine-PRD.md  am4-routemine-SETUP-GUIDE.md  notes.md  perf-baseline-phase2.md  perf-flamegraphs-phase2.md
app/: __init__.py  __main__.py  credentials.py  env_compat.py  paths.py  state.py
commands/: airline.py  fleet_recommend.py
core/: __init__.py  ci_recalc.py  game_mode.py
dashboard/: __init__.py  app.py  auth.py  db.py  errors.py  extraction_delta_diff.py  hub_freshness.py  server.py  setup_flow.py  ui_settings.py
database/: __init__.py  extraction_runs.py  my_routes_dao.py  queries.py  refresh_jobs.py  saved_filters.py  schema.py  settings_dao.py
docs/: BASELINE_GUARDRAILS.md  DEVELOPMENT.md  UIPRO_DESIGN_BRIEF.md  UIPRO_VISUAL_SPEC.md
exporters/: __init__.py  csv_export.py  excel_export.py
extractors/: __init__.py  aircraft.py  airports.py  routes.py
packaging/: README.md  SMOKE_TEST.md  build-am4-wheel.yml
scripts/: convert_csv.py  strip_vcs_from_lock.py  update_deps.sh  (+1 more)
(+225 files in other folders)
