[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "am4-ops-center"
version = "0.1.1"
description = "Bulk AM4 route extraction into SQLite, CSV/Excel, and FastAPI dashboard."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "am4 @ git+https://github.com/saqibj/am4.git@af2ddf7cd433b0e61c1732fbdd4780136d46aa29",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "tqdm>=4.65.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "commands*", "dashboard*", "database*", "exporters*", "extractors*"]
